docker/envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: spring-petclinic
                http_filters:
                  - name: envoy.filters.http.compressor
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                      response_direction_config:
                        common_config:
                          min_content_length: 30
                          content_type:
                            - application/json
                        disable_on_etag_header: false
                      compressor_library:
                        name: text_optimized
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                          memory_level: 3
                          window_bits: 10
#                  - name: envoy.filters.http.decompressor
#                    typed_config:
#                      "@type": type.googleapis.com/envoy.extensions.filters.http.decompressor.v3.Decompressor
#                      decompressor_library:
#                        name: upload
#                        typed_config:
#                          "@type": "type.googleapis.com/envoy.extensions.compression.gzip.decompressor.v3.Gzip"
#                          window_bits: 9
#                          chunk_size: 8192
#                          # If this ratio is set too low, then body data will not be decompressed completely.
#                          max_inflate_ratio: 1000
#                      response_direction_config:
#                        common_config:
#                          enabled:
#                            default_value: false
#                            runtime_key: response_decompressor_enabled
                  - name: "envoy.filters.http.cache"
                    typed_config:
                      "@type": "type.googleapis.com/envoy.extensions.filters.http.cache.v3.CacheConfig"
                      typed_config:
                        "@type": "type.googleapis.com/envoy.extensions.http.cache.simple_http_cache.v3.SimpleHttpCacheConfig"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: spring-petclinic
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: spring-petclinic
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: spring-petclinic
                      port_value: 8080
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
